# CVVerify

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CVVerify.pro  CVVerifyCoreTests.pro  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: app_defaults.json
config/model_templates/: classification.json  keypoint.json  ocr.json  segmentation.json  yolo_detection.json
config/operator_schemas/: README.md  affine_transform.json  art_effect.json  bilateral_filter.json  box_filter.json  brightness_contrast.json  canny.json  color_convert.json  color_map.json  connected_components.json  contour_detect.json  corner_detect.json  crop.json  edge_laplacian.json  edge_scharr.json  edge_sobel.json  emboss.json  fiber_glow.json  flip.json  flood_fill.json  gaussian_blur.json  grabcut.json  grayscale.json  hist_equalize.json  histogram_bar.json  histogram_line.json  hough_circles.json  hough_lines.json  index.json  linear_abs_transform.json  mean_blur.json  median_blur.json  morphology.json  pencil_sketch.json  perspective_transform.json  polar_transform.json  resize.json  rotate.json  segment_kmeans.json  segment_meanshift.json  (+10 more)
docs/: build-linux.md  build-macos.md  build-windows-mingw.md  manual-validation-v0.1.0.md  open-source-release-checklist.md  operator-parameter-review.html  quick-start-validation.md  repository-structure.md
docs/superpowers/plans/: 2026-06-04-cvverify-media-operator-plan.md  2026-06-04-cvverify-v1-foundation-plan.md  2026-06-05-yolo-onnx-detection-plan.md  2026-06-05-yolo-video-detection-plan.md  2026-06-09-operator-system-expansion-plan.md
docs/superpowers/specs/: 2026-06-04-opencv-validation-platform-design.md  2026-06-05-yolo-onnx-detection-design.md  2026-06-09-operator-system-expansion-design.md
opencvsdk/windows/opencv4.12/: setup_vars_opencv4.cmd
packaging/linux/: README.md  package.sh
packaging/macos/: README.md  package.sh
packaging/windows/: README.md  package.ps1
qmake/: cvverify_common.pri  cvverify_sources.pri
resources/: app_resources.qrc
samples/: README.md
samples/models/: README.md  labels.example.txt
samples/pipelines/: basic_blur.json  edge_canny.json  histogram_sidecar.json  morphology_open.json
samples/projects/: demo_project.json  edge_canny_project.json
scripts/: README.md  generate_operator_schemas.py  generate_sample_assets.py
src/: main.cpp
src/app/: AppDefaultsLoader.cpp  AppDefaultsLoader.h  AppSettings.cpp  AppSettings.h  AppVersion.cpp  AppVersion.h  ApplicationContext.cpp  ApplicationContext.h  CommandDispatcher.cpp  CommandDispatcher.h  ServiceLocator.cpp  ServiceLocator.h
src/core/detection/: ClassificationOnnxStep.cpp  ClassificationOnnxStep.h  CustomTensorOnnxStep.cpp  CustomTensorOnnxStep.h  DetectionExportService.cpp  DetectionExportService.h  DetectionModelDescriptor.h  DetectionPreprocess.cpp  DetectionPreprocess.h  DetectionRenderComposer.cpp  DetectionRenderComposer.h  DetectionTypes.h  KeypointOnnxStep.cpp  KeypointOnnxStep.h  LabelProvider.cpp  LabelProvider.h  ModelImportService.cpp  ModelImportService.h  ModelPackageLoader.cpp  ModelPackageLoader.h  ModelTemplateLoader.cpp  ModelTemplateLoader.h  OcrOnnxStep.cpp  OcrOnnxStep.h  OnnxModelStepFactory.cpp  OnnxModelStepFactory.h  OpenCvDnnRunner.cpp  OpenCvDnnRunner.h  SegmentationOnnxStep.cpp  SegmentationOnnxStep.h  YoloDetectionDecoder.cpp  YoloDetectionDecoder.h  YoloDetectionStep.cpp  YoloDetectionStep.h  YoloOnnxImportService.cpp  YoloOnnxImportService.h
src/core/diagnostics/: DiagnosticsLog.cpp  DiagnosticsLog.h  DnnRuntimeInfo.cpp  DnnRuntimeInfo.h
src/core/frame/: FramePacket.h
src/core/media/: IMediaSource.h  ImageFileSource.cpp  ImageFileSource.h  ImageFolderSource.cpp  ImageFolderSource.h  MediaTypes.h  VideoFileSource.cpp  VideoFileSource.h
src/core/models/: ModelRegistry.cpp  ModelRegistry.h
src/core/operators/: BuiltinOperatorBootstrap.cpp  BuiltinOperatorBootstrap.h  OperatorDescriptor.h  OperatorRegistry.cpp  OperatorRegistry.h  OperatorSchemaExporter.cpp  OperatorSchemaExporter.h  OperatorSchemaLoader.cpp  OperatorSchemaLoader.h
src/core/pipeline/: BatchPipelineRunner.cpp  BatchPipelineRunner.h  IPipelineStep.h  PipelineDefinition.h  PipelineEngine.cpp  PipelineEngine.h  PipelineJsonSerializer.cpp  PipelineJsonSerializer.h
src/core/project/: ParameterPresetStore.cpp  ParameterPresetStore.h  ProjectDefinition.h  ProjectService.cpp  ProjectService.h
src/core/tasks/: TaskScheduler.cpp  TaskScheduler.h  TaskTypes.h
src/infra/opencv/: OpenCvImageIO.cpp  OpenCvImageIO.h  OpenCvQtImageConverter.cpp  OpenCvQtImageConverter.h
src/infra/platform/: PlatformPaths.cpp  PlatformPaths.h
src/ui/dialogs/: ModelConfigEditorDialog.cpp  ModelConfigEditorDialog.h  OperatorParameterDialog.cpp  OperatorParameterDialog.h  OperatorParameterDialog.ui  SystemSettingsDialog.cpp  SystemSettingsDialog.h  SystemSettingsDialog.ui  YoloModelImportDialog.cpp  YoloModelImportDialog.h  YoloModelImportDialog.ui
src/ui/mainwindow/: MainWindow.cpp  MainWindow.h  MainWindow.ui
src/ui/panels/: DiagnosticsPanel.cpp  DiagnosticsPanel.h  ExportResultsPanel.cpp  ExportResultsPanel.h  ExportResultsPanel.ui  MediaPanel.cpp  MediaPanel.h  ModelListPanel.cpp  ModelListPanel.h  ParameterPanel.cpp  ParameterPanel.h  PipelinePanel.cpp  PipelinePanel.h  StatisticsPanel.cpp  StatisticsPanel.h  TaskConsolePanel.cpp  TaskConsolePanel.h  TaskHistoryPanel.cpp  TaskHistoryPanel.h
src/ui/widgets/: CanvasView.cpp  CanvasView.h  FourGridCanvasWidget.cpp  FourGridCanvasWidget.h  PreviewCanvasHost.cpp  PreviewCanvasHost.h  TimelineWidget.cpp  TimelineWidget.h  WipeComparisonWidget.cpp  WipeComparisonWidget.h
tests/integration/: test_integration_smoke.cpp
tests/unit/core/: test_app_defaults_loader.cpp  test_app_version.cpp  test_command_dispatcher.cpp  test_core_pipeline.cpp  test_detection_export_service.cpp  test_detection_render_composer.cpp  (+13 more)
(+105 files in other folders)
